# accident_reconstruction_system

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml
accident_detection_app/: build.gradle  settings.gradle
accident_detection_app_kotlin/: README.md  build.gradle  jass.conf  settings.gradle
accident_detection_app_kotlin/src/main/kotlin/: AccidentDetectionApp.kt  EmptyTopicRecords.kt
accident_detection_app_kotlin/src/main/kotlin/utils/: utils.kt
backend/: .gitlab-ci.yml  Dockerfile  README.md  manage.py  pyproject.toml  requirements.txt
backend/config/: urls.py  wsgi.py
backend/config/settings/: base.py  development.py
backend/sample_app/: api.py  models.py  urls.py  views.py
backend/sample_app/api_test/: eventmemo.py  movie.py  sensor.py  task.py  utils.py
backend/sample_app/migrations/: 0001_initial.py
bootstrap/backend/kustomize/accident-api/base/: deployment.yaml  kustomization.yaml  service.yaml
database/: create_table_in_postgresql.py  insert_data_to_postgresql.py
frontend/: .env.development  .env.int  .env.production  .env.stage  .eslintrc.js  .gitlab-ci.yml  Dockerfile  README.md  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AppHeader.tsx  AppLayout.tsx  AppMenu.tsx  FlexColumnLayout.tsx  FlexRowLayout.tsx  Map.tsx  ScrollLayout.tsx
frontend/src/pages/auth/: Login.tsx
frontend/src/recoil/auth/: atom.ts
frontend/src/recoil/effects/: localStorageEffect.ts
frontend/src/utils/: PrivateRoute.tsx  axiosInstance.ts
(+13 files in other folders)
