[tool.poetry]
name = "fii-accident-reconstruction"
version = "0.1.0"
description = ""
authors = ["seungeun.kang <seungeun.kang@42dot.ai>"]
readme = "README.md"
packages = [{include = "fii_accident_reconstruction"}]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.5"
pandas = "^1.5.1"
numpy = "^1.23.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
